# kpm-spore

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  env.example  new-module.bat  new-module.sh
modules/hello/: module.c
modules/hidemap/: module.c  module.lds
modules/injectHide/: module.c  symbols.c  symbols.h
modules/injectHide/proc/: maps.c  maps.h
modules/injectHide/utils/: config.c  config.h  fopt.c  fopt.h  strings.c  strings.h
modules/template/: module.c
